<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background2">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textoDificuldade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/dificuldade"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <RadioGroup
        android:id="@+id/dificuldade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoDificuldade">

        <RadioButton
            android:id="@+id/dificil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dif_cil"
            android:textSize="10sp"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/medio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="22dp"
            android:text="@string/m_dio"
            android:textSize="10sp"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/facil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/f_cil"
            android:textSize="10sp"
            android:textColor="@color/white" />
    </RadioGroup>

    <Button
        android:id="@+id/btnComecar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comecar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/design_default_color_primary_dark"/>

</androidx.constraintlayout.widget.ConstraintLayout>